css/site.css
---
---

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "_includes/native";

html {
  scrollbar-color: theme("colors.evergreen.700") theme("colors.evergreen.900");
}

body {
  @apply font-sans bg-evergreen-900 text-white min-h-screen pb-8;

  font-size: 18px;
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 100%;
}

img {
  @apply bg-white;
}

.book-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, 300px);
  grid-gap: 20px;
  justify-content: center;
}

a {
  @apply text-evergreen-500 font-semibold underline;
}

h1 {
  @apply font-semibold;

  font-size: 2rem;
}

h2 {
  @apply font-semibold;

  font-size: 1.7rem;
}

h3 {
  @apply font-semibold;

  font-size: 1.5rem;
}

h4 {
  @apply font-semibold;

  font-size: 1.3rem;
}

h5 {
  @apply font-semibold;

  font-size: 1.1rem;
}

h2 > span > a > svg,
h3 > span > a > svg,
h4 > span > a > svg,
h5 > span > a > svg {
  height: 1.5rem;
}

:target::before {
  content: "";
  display: block;
  height: 120px;
  margin: -120px 0 0;
}

figure.bg-transparent img {
  @apply bg-transparent;
}

figcaption {
  @apply italic text-sm text-center;
}

ul {
  list-style-type: disc;
  padding-left: theme('padding.4');
}

ol {
  list-style-type: decimal;
  padding-left: theme('padding.4');
}

blockquote {
  @apply bg-evergreen-700 rounded italic p-4 text-lg mt-4;
}

blockquote p::before {
  content: "\"";
}

blockquote p::after {
  content: "\"";
}

p,
ul,
ol,
li {
  @apply font-light;
}

strong {
  @apply font-bold;
}

h1,
h2,
h3,
h4,
h5 {
  @apply mt-10;
}

p,
ul,
ol {
  @apply mt-4 leading-loose;
}

figure,
.highlighter-rouge {
  @apply mt-10;
}

figure + p,
.highlighter-rouge + p {
  @apply mt-10;
}

li ul,
li ol {
  @apply mb-4;
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
p:first-child,
ul:first-child,
ol:first-child,
.highlighter-rouge:first-child {
  @apply mt-0;
}

hr {
  @apply bg-evergreen-400 border-none h-px my-4 mx-auto;
}

.post hr {
  @apply max-w-md my-8;
}

.mobile-nav {
  overflow-y: hidden;
  max-height: 12rem;
  transition-property: all;
  transition-duration: 150ms;
}

.closed {
  max-height: 0;
}

@variants focus {
  .focus-ring-400 {
    outline: 0;
    box-shadow: 0 0 0 3px theme("colors.evergreen.400");
  }
}

@tailwind utilities;

